--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,8 @@ build-job:
   stage: build
   script:
     - echo "Building..."
-    - npm i --max-old-space-size=400
-    - npm run build --max-old-space-size=400
+    - npm i
+    - npm run build
 
 test-job:
   stage: test
@@ -14,6 +14,6 @@ test-job:
 deploy-dev:
   stage: deploy
   script:
-    - npm i --max-old-space-size=400
-    - npm run build --max-old-space-size=400
-    - cp -a ./build/. /home/defiv2/frontend
+    - npm i
+    - npm run build
+    - cp -a ./build/. /home/defi/frontend
