--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,3 +18,6 @@ deploy-dev:
     - npm run build
     - rm -r /home/defi/frontend/*
     - cp -r build/* /home/defi/frontend/
+  only:
+    - master
+    - develop
