--- a/package.json
+++ b/package.json
@@ -62,5 +62,14 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://git.rwth-aachen.de/bp-2020-altklausuren-lernportal/kreuzen-frontend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
